Fixed bug with navbar on mobile devices

--- a/client/stylesheets/globals/media.import.less
+++ b/client/stylesheets/globals/media.import.less
@@ -36,11 +36,6 @@
       text-align: right;
       display: block;
     }
-    .nav.navbar-top-links.navbar-right > li:first-child {
-      position: absolute;
-      right: 20px;
-      top: 14px;
-    }
   }
 }
 
